<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:backgroundTint="#616161"
    android:backgroundTintMode="multiply"
    tools:context=".home.ProfileActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/bike_logo" />


    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="204dp"
        android:layout_height="204dp"
        android:layout_above="@id/etFirstName"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_profile" />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/imgProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/profile"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFirstName"
        style="@style/AllEditTexts"
        android:layout_above="@id/etLastName"
        android:layout_marginBottom="24dp"
        android:ems="20"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etLastName"
        style="@style/AllEditTexts"
        android:layout_above="@id/etEmail"
        android:layout_marginBottom="24dp"
        android:ems="20"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/AllEditTexts"
        android:layout_above="@id/etPhoneNumber"
        android:layout_marginBottom="24dp"
        android:ems="30"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPhoneNumber"
        style="@style/AllEditTexts"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone" />


</RelativeLayout>