<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signup"
    android:backgroundTint="#616161"
    android:backgroundTintMode="multiply"
    tools:context=".authentication.ResetPasswordActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/bike_logo" />

    <EditText
        android:id="@+id/resetEmail"
        style="@style/AllEditTexts"
        android:layout_centerVertical="true"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/resetEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/bg_startUp"
        android:onClick="onSendClick"
        android:text="@string/send"
        android:textAllCaps="false" />


</RelativeLayout>